--- a/server/config.json5
+++ b/server/config.json5
@@ -29,7 +29,7 @@
       // Ids for decks in the order they will be presented to the user.
       // The game will look for these in the directory given by basePath above, and will expect them to have the
       // .deck.json5 extension.
-      decks: ["cah-base-en", "cah-base-ptbr"],
+      decks: ["cah-base-en", "jaska", "bloom"],
     },
 
     // Allows players to load decks from Many Decks.
@@ -56,7 +56,7 @@
   defaults: {
     rules: {
       handSize: 10,
-      scoreLimit: 25,
+      scoreLimit: 6,
       houseRules: {
         // packingHeat: {},
         // reboot: { cost: 1 },
