--- a/server/decks/bloom.deck.json5
+++ b/server/decks/bloom.deck.json5
@@ -131,6 +131,7 @@
     [["While in Ukraine, Mueller is going to love ",{}," but hate ",{}, ".",],],
     [["Who is this Rorschach guy and why does he keep drawing pictures of ",{},"?",],],
     [["Why am I horny?",],[{transform: "Capitalize",},],],
+    [["People who live in glass houses shouldn't ",{},".",],],
     [["If I were a spice girl, I would be ",{transform: "Capitalize",}, " Spice"],],
     [["Abbi Normal? More like Abbi ",{transform: "Capitalize",},],],
     [["What is Abbi painting in her next stream?",], [{transform: "Capitalize",},],],
@@ -157,8 +158,12 @@
     [[{transform: "Capitalize",},"? I'll drink to that!",],],
     [[{transform: "Capitalize",}," is the next best thing since eating ass.",],],
     [[{transform: "Capitalize",}," was invented by ", {}, " twice at the same time",],],
+    [["No one had even considered that ", {}, " would be the reason aliens stay away from Earth.",],],
+    [["You keep ", {}, " out of your fucking mouth!",],],
   ],
   responses: [
+    "Keeping Will Smith's wife's name out of your fucking mouth",
+    "Will Smith's wife's name",
     "being #BootyBlessed",
     "#chat-and-nonesense",
     "'eating' an entire chocolate bar purely through licking ",
@@ -171,6 +176,8 @@
     "Apro",
     "Apro's taste in music",
     "Armie Hammer having his date for dinner",
+    "the longest fucking pair of balls you've ever seen",
+    "reducing the perpetration of the Holocaust to just another case of 'goys will be goys'",
     "Bander",
     "Bander",
     "Bander's disturbing comments that he thinks people find funny and not utterly horrifying",
@@ -179,6 +186,10 @@
     "Bill Nye the Violence Guy",
     "Camyo",
     "Camyo",
+    "CollegeBro",
+    "CollegeBro",
+    "CaitlynSway",
+    "CaitlynSway",
     "Camyo's magical underpants",
     "pmcalldm",
     "pmcalldm",
@@ -196,8 +207,6 @@
     "Dennis",
     "Aubri",
     "Aubri",
-    "Metalchondria",
-    "Metalchondria",
     "godofsex",
     "pmcalldm",
     "pmcalldm",
@@ -219,6 +228,8 @@
     "George? Georgie? IDK, the younger Brit",
     "Georgie's smoldering glare",
     "Golf With Friends",
+    "Meaty little fingers",
+    "Getting called sexist when you are being sexist",
     "Gryffindor",
     "Hufflepuff",
     "Hype's O-face when the pilot announces they're over 30,000 feet",
@@ -236,7 +247,7 @@
     "Jaska's deep voice",
     "Jaska's vomit-inducing ego",
     "Jeff Bezos' Dickship",
-    "Khalathas",
+    "JFK's head just doing that",
     "killing presidents with your trimmed but full George H.W. Bush",
     "catching a Snowflake on your tongue",
     "being the Uncle Rico of ejaculating",
@@ -247,7 +258,6 @@
     "Pronouncing 'robot' the right way",
     "Putting on the big boobs bra for the big show",
     "human flesh fleshlight",
-    "M0nster",
     "M0nster",
     "MFC",
     "Monster's magnificent manhole",
@@ -262,7 +272,6 @@
     "Mueller's pudding-spined Trotskyism",
     "Murder Trivia",
     "Neil deGrasse Tyson's black hole",
-    "Nova",
     "Nova",
     "Nova's Lego collection",
     "Ollie",
@@ -401,6 +410,7 @@
     "being from Texas",
     "being from Ukraine",
     "being from Utah",
+    "not being American",
     "being from a Dakota but not being sure which one",
     "being from the Midwest",
     "being from the UK",
