--- a/server/decks/bloom.deck.json5
+++ b/server/decks/bloom.deck.json5
@@ -180,6 +180,7 @@
     "reducing the perpetration of the Holocaust to just another case of 'goys will be goys'",
     "Bander",
     "Bander",
+    "Getting dumber and dumber after contracting brain eating bacteria",
     "Bander's disturbing comments that he thinks people find funny and not utterly horrifying",
     "Bloodborne (the best game ever created)",
     "Bustin'",
@@ -232,6 +233,8 @@
     "Getting called sexist when you are being sexist",
     "Gryffindor",
     "Hufflepuff",
+    "Missing your ex, but... improving your aim",
+    "Andrew Tate enjoying his 33 cars while in prison",
     "Hype's O-face when the pilot announces they're over 30,000 feet",
     "Hype's innocent and pure wet dreams about ant feet",
     "Hype's sparkling nipnips",
