--- a/server/decks/jaska.deck.json5
+++ b/server/decks/jaska.deck.json5
@@ -4,9 +4,19 @@
   author: "bloomers",
   calls: [
    [["I resorted to cannibalism after ",{},],],
+   [["Researchers found the diary of Mary and were shocked to discover that she actually became pregnant by ", {}, ". But, she just couldn't tell Joseph.",],],
+   [["Swimming with sharks is nothing. Try swimming with ", {}, "."],],
+   [[{},": title of my sex tape",],],
   ],
   responses: [
     "spending 19 minutes stuck in an elevator",
+    "Elon's Musk",
+    "marrying a supermodel to make a son that's hot enough to kiss",
+    "naming my kid Kanye before all the Hitler stuff",
+    "these $200 glasses",
+    "licking the fluids that run down her thighs",
+    "eating your way out of a pile of bodies",
+    "sucking on a colostomy bag like a Capri Sun",
     "masturbation death grip",
     "performing fellatio on a Pikachu",
     "tricking Alzheimer's sufferers into prostitution",
