--- a/server/decks/bloom.deck.json5
+++ b/server/decks/bloom.deck.json5
@@ -55,6 +55,7 @@
     [["I'm not irresponsible. Just today, I started ",{},],],
     [["I'm selling a picture of ", {}, " as an NFT for 2.3 billion USD.",],],
     [["Imagine not ", {}, "?"]],
+    [["They're a 10 but they ",{},],],
     [["In this server, ", {},],],
     [["In this server: men ", {}, " instead of going to therapy.",],],
     [["It's rank month on MFC. You know what that means.",],[{transform: "Capitalize",},],],
@@ -68,6 +69,7 @@
     [["My Only Fans got kicked up a notch by ", {},],],
     [["My bae rank fell when I was ", {},],],
     [["My D&D character will be completely based on ", {},],],
+    [["CCTV footage of me ",{}," at the grocery store"],],
     [["My favorite secret discord channel is for talking about ", {},],],
     [["My new screen name was inspired by ", {},],],
     [["My social life has turned to shit so now I'm just ", {}, " for fun.",],],
@@ -165,6 +167,21 @@
     "Keeping Will Smith's wife's name out of your fucking mouth",
     "Will Smith's wife's name",
     "being #BootyBlessed",
+    "copying Twitter's opinions on AI art",
+    "never having a unique thought ever",
+    "British 'people'",
+    "French 'people'",
+    "the moment you realize your next reincarnation will also never touch a woman",
+    "Trinidad, but not Tobago",
+    "the Mexico of Central America",
+    "the Mexico of North America",
+    "the Mexico of South America",
+    "Lima being the CDMX arsonist",
+    "explaining to Lima that he lives in Central America",
+    "only turning on your camera when Emily does",
+    "Camyo's not-so-hidden racism",
+    "a 2000 yard rush",
+    "a leisurely drive down the 91 in your white Bronco after a disagreement with your wife",
     "#chat-and-nonesense",
     "'eating' an entire chocolate bar purely through licking ",
     "12 guys individually showing up to Twitchcon in a Witcher cosplay to impress their streamer crush",
@@ -175,6 +192,12 @@
     "Apro",
     "Apro",
     "Apro's taste in music",
+    "Captain Hook getting kicked out of the circlejerk",
+    "uppercase gums and lowercase teeth",
+    "lowercase gums and uppercase teeth",
+    "the transphobic safe space known as Hogwart's: Legacy",
+    "an aborted Pro-Life campaign",
+    "the yearly body count of gender reveal parties",
     "Armie Hammer having his date for dinner",
     "the longest fucking pair of balls you've ever seen",
     "reducing the perpetration of the Holocaust to just another case of 'goys will be goys'",
@@ -187,6 +210,7 @@
     "Bill Nye the Violence Guy",
     "Camyo",
     "Camyo",
+    "fucking architects",
     "CollegeBro",
     "CollegeBro",
     "CaitlynSway",
@@ -212,6 +236,9 @@
     "pmcalldm",
     "pmcalldm",
     "a copy of my dick's girth certificate",
+    "giggling after hearing that Tom Brady is now fully paralyzed",
+    "men who are pro-choice about vaccines because no one can tell them what to do with their bodies, but not about pregnancy",
+    "Lima's rational hate boner for L*wis H*milton",
     "Emily actually going to get sleep",
     "Emily bragging about how her niece is better than you again",
     "Emily's ASS and BOOBS. Oh, and PERSONALITY most of all",
@@ -225,7 +252,9 @@
     "Fafnirh's impeccable hair",
     "Gambi",
     "Gambi",
-    "George? Georgie? IDK, the younger Brit",
+    "Shy Yokai",
+    "Outgoing Yokai",
+    "cutting the head off of my pet axolotl, fully expecting it to grow back",
     "George? Georgie? IDK, the younger Brit",
     "Georgie's smoldering glare",
     "Golf With Friends",
@@ -294,6 +323,10 @@
     "Reign's underlying health issues",
     "Sally",
     "Shark Week",
+    "Shark Side of the Moon",
+    "getting back at your uncle now that you're old enough",
+    "making throat slit gestures",
+    "learning wedding dresses are white to hide the best man's cum stains",
     "Sirall",
     "Sirall",
     "Slytherin",
