--- a/server/decks/jaska.deck.json5
+++ b/server/decks/jaska.deck.json5
@@ -7,13 +7,82 @@
    [["Researchers found the diary of Mary and were shocked to discover that she actually became pregnant by ", {}, ". But, she just couldn't tell Joseph.",],],
    [["Swimming with sharks is nothing. Try swimming with ", {}, "."],],
    [[{},": title of my sex tape",],],
+   [["Kanye West is now ranting about ",{},],],
+   [["My uncle got me ",{}," for Christmas. I cried.",],],
+   [["Clippy, the Microsoft Assistant, now offers help with ",{},"."],],
   ],
   responses: [
     "spending 19 minutes stuck in an elevator",
     "Elon's Musk",
+    "inflating your dick by squeezing your balls",
+    "rule 34 Muhammad (peace be unto him)",
+    "Amber's Turd",
+    "the Blue's Clues Booze Cruise",
+    "yet another situation in which I have to escape through a window and flee naked into the streets",
+    "the Challenger 'disaster'",
+    "smelling like a poor person",
+    "the stripper's 5 o'clock shadow",
+    "later admitting that I died of suicide after the CIA was accused of assassinating me",
+    "mouth to ass resuscitation",
+    "Donald Trump's taxes",
+    "erotic sharting",
+    "God's little oopsie",
+    "dying in your sleep like a total coward",
+    "being indecisive over which color lives matter",
+    "loving all races, even the bad ones",
+    "Toast about to eat a bullet on stream when Xev didn't show up",
+    "sculpting your sex doll on Twitch",
+    "a threesome where only two are alive",
+    "giving your girlfriend a promise ring (that you will leave your wife)",
+    "introducing your girlfriend to your wife",
+    "your wife's boyfriend",
+    "your wife's boyfriend letting you stay up to play PS4 for a little while",
+    "losing virginity just a little bit",
+    "keeping the government out of my Medicare",
+    "child labor",
+    "ethically sourced slave labor",
+    "receiving CPR from a teenage lifeguard and having to register as a sex offender",
+    "evicting a homeless person from his newspaper castle",
+    "the Illuminaughty",
+    "Butt CPR",
+    "the yassification of Ronald Reagan",
+    "Nancy Reagan, renowned cock gobbler",
+    "getting the ol' JFK at the end of the date (messy head in the backseat of the car)",
+    "the reproductive act",
+    "following the girl from the club home and crawling through her bathroom window to explain she accidentally gave you the wrong number",
+    "having to tell Mickey that Minnie was not being silly, but fucking Goofy",
+    "being a bigot by not liking her cock",
+    "just introducing the tip",
+    "an STD reveal party",
+    "being naked in a nonsexual manner",
+    "a Tricerabottoms",
+    "scaling a mermaid",
+    "Herschel Walker getting fucked by a moose",
+    "Twitter under Elon Musk",
+    "learning that Rodney King was actually on fire and they were just putting him out",
+    "forgetting he's inside you",
+    "Ariel's cloaca",
+    "oppressed billionaires",
+    "impatiently waiting for when white men finally get the upper hand",
+    "sliding into someone's BM's",
+    "that Mt Rushmore is a natural formation",
+    "figuring out you are part French and becoming violently ill",
+    "Gary Oldman in the role of a lifetime, on his knees",
+    "the Fleshlight hitting the balls too hard when set to maximum suction",
+    "an unexpectedly crusty glass of milk",
+    "having a guy for that",
+    "feeling it slip inside you",
+    "a fecal catastrophe",
+    "an emotional support slug",
+    "Kanye West fucking all parts of Adolf Hitler's remains",
+    "discovering a little too late that your hot step-sister is also your half sister",
+    "biting into a nice piece of medium rare chicken",
+    "Vladimir Pootin pooping and falling down the stairs",
+    "preferring them used",
+    "upgrading your foster child to a new model",
+    "an unexpectedly crusty grass of milk",
     "marrying a supermodel to make a son that's hot enough to kiss",
     "naming my kid Kanye before all the Hitler stuff",
-    "these $200 glasses",
     "licking the fluids that run down her thighs",
     "eating your way out of a pile of bodies",
     "sucking on a colostomy bag like a Capri Sun",
