--- a/server/decks/bloom.deck.json5
+++ b/server/decks/bloom.deck.json5
@@ -192,6 +192,7 @@
     "Apro",
     "Apro",
     "Apro's taste in music",
+    "making a sex tape with Kanye in hopes of creating an empire",
     "Captain Hook getting kicked out of the circlejerk",
     "uppercase gums and lowercase teeth",
     "lowercase gums and uppercase teeth",
@@ -211,6 +212,10 @@
     "Camyo",
     "Camyo",
     "fucking architects",
+    "Jimbo Slice",
+    "Jimbo Slice",
+    "being just so fucking sweaty at a children's game",
+    "male hot tub streams",
     "CollegeBro",
     "CollegeBro",
     "CaitlynSway",
