--- a/server/decks/bloom.deck.json5
+++ b/server/decks/bloom.deck.json5
@@ -13,17 +13,28 @@
     [["And the Bloomer Award for ", {}, " goes to ", {},"!"],],
     [["And the Jaskaward for ", {}, " goes to ", {},"!"],],
     [["Apro's dirty little secret:",],[{transform: "Capitalize",},],],
+    [["Hey everyone! I'm Emily Bloom, and on today's stream we're gonna be ", {},],],
+    [["Ahoy everyone! I'm EternalToast, and on today's stream I will be ", {},],],
+    [["Hey guys! I'm Shy Yokai, and on today's stream we're gonna try ", {},],],
+    [["CaitlynSway's new channel point redeem forces her to try ", {}, " for an entire minute.",],],
     [["At Reign and Hype's wedding, ", {}, " got caught ", {},],],
     [["At first I was all like ", {}, ", and then I was like ", {},],],
     [["Baca's dirty little secret:",],[{transform: "Capitalize",},],],
     [["Baca's renovations includes a hidden room with a shrine dedicated to ", {transform: "Capitalize",},],],
     [["Bander gives away so many subs to Emily's Stream because he likes ", {},],],
     [["Before I joined this discord, I was ", {}, ". Now I'm ", {}, ".",],],
-    [["Bill Nye the ", {transform: "Capitalize",}, " Guy",],],
     [["Camyo's comic he won't show to anyone: Emily and Jaska ", {},],],
+    [["Camyo's comic he won't show to anyone: Emily, Toast and Lima ", {},],],
+    [["Camyo's comic he won't show to anyone: Emily and Smeg ", {},],],
+    [["Camyo's comic he won't show to anyone: Emily and Apro ", {},],],
+    [["Mueller took Camyo's mom on a romantic date filled with ", {}, " and " {},"."],],
     [["Congratulations, you just earned a one-way ticket to ", {},],],
     [["Did you know there's a subreddit dedicated to Emily's ", {}, "?",],],
+    [["Did you know there's a subreddit dedicated to Gambi's ", {}, "?",],],
+    [["Lima isn't Mexican, he's ",{},". There's a difference, right?"],],
+    [["Toast took a genetic test and it turns out he's 1/4 ",{},"!",],],
     [["Do your part to stop ", {},".",],],
+    [["Tonight, Apro mainsplained ", {}, " to Emily.",],],
     [["Don't diss Amouranth! She's just ", {}, "!",],],
     [["Dude, I rule at ", {}, " but I really suck at ", {},],],
     [["During Uncanny Scouters latest haunted encounter, the ghost was ", {},],],
@@ -44,7 +55,7 @@
     [["Hype may like feet, and he may like ants, but it's nothing compared to his love for ", {}]],
     [["Hype's skin-care routine consists of a strict regimen of ",{},],],
     [["I can't hide it anymore. I like ", {}, " and I'm proud.",],],
-    [["I heard Nova spends his extra tip money on ", {},],],
+    [["I was having a nice birthday until Emily started ",{},"... Not cool."],],
     [["I knew the Wheel of Time obsession became too extreme when I found myself ", {},],],
     [["I like ", {}, " like I like my ", {}, ":",],[{transform: "Capitalize",},".",],],
     [["I really wish you'd stop talking about ", {},],],
@@ -62,10 +73,10 @@
     [["Jaska likes ass, but Jaska LOVES ", {},],],
     [["Jaska's fatherly advice to Ollie: ",],["Take it from me, son. The most important thing in life is ",{transform: "Capitalize",},],],
     [["Jaska's next stream will be attempting the ", {}, " no-hit-run"]],
-    [["Look dude, I’d love to catch your stream but ", {}]],
+    [["Look dude, I’d love to catch your stream but I'm ", {}]],
     [["Make a CamyoComic: "], [{}, " and ", {}, " are ", {},],],
     [["Man this is such bullshit, fuck ", {},],],
-    [["Mod life be all like ", {},],],
+    [["Emily's DMs be all like ", {},],],
     [["My Only Fans got kicked up a notch by ", {},],],
     [["My bae rank fell when I was ", {},],],
     [["My D&D character will be completely based on ", {},],],
@@ -74,6 +85,7 @@
     [["My new screen name was inspired by ", {},],],
     [["My social life has turned to shit so now I'm just ", {}, " for fun.",],],
     [["My three wishes from a genie:",],["1. ", {transform: "Capitalize",},],["2. ", {transform: "Capitalize",},],["3. ", {transform: "Capitalize",},],],
+    [["Movie Pitch:",],["Act 1. ", {transform: "Capitalize",},],["Act 2. ", {transform: "Capitalize",},],["Act 3. ", {transform: "Capitalize",},],],
     [["No one should be allowed to be ", {}, " in this country. Share if you agree!",],],
     [["On a scale of ", {}, " to ", {}, ", how would you rate your pain?"]],
     [["Payday isn't for 12 days and I already spent my whole paycheck on ",{},".",],],
@@ -106,6 +118,8 @@
     [["Tom Nook will upgrade your house storage in exchange for ", {},],],
     [["Tonight, I'm on the prowl for ", {},],],
     [["My next cosplay will be ", {},],],
+    [["Smeg's Steamy Secret to Spicy Sex:",],[{transform: "Capitalize",},],],
+    [["Game Idea: It's just like Fall Guys, except it's ", {},],],
     [["We should do more ",{}," and less ",{},".",],],
     [["What is art?",],[{transform: "Capitalize",},],],
     [["How did Emily kill her latest plant?",],[{transform:"Capitalize",},],],
@@ -162,12 +176,16 @@
     [[{transform: "Capitalize",}," was invented by ", {}, " twice at the same time",],],
     [["No one had even considered that ", {}, " would be the reason aliens stay away from Earth.",],],
     [["You keep ", {}, " out of your fucking mouth!",],],
+    [["Emily's not busy enough, so she started taking a course on the Theory of ", {}, " today."],],
   ],
   responses: [
     "Keeping Will Smith's wife's name out of your fucking mouth",
     "Will Smith's wife's name",
     "being #BootyBlessed",
+    "Spongebob's porous penile tissue",
     "copying Twitter's opinions on AI art",
+    "using Emily in order to get closer to Jaska",
+    "whatever the fuck the Fall Guys are",
     "never having a unique thought ever",
     "British 'people'",
     "French 'people'",
@@ -181,13 +199,17 @@
     "only turning on your camera when Emily does",
     "Camyo's not-so-hidden racism",
     "a 2000 yard rush",
+    "deepthroating a didgeridoo",
     "a leisurely drive down the 91 in your white Bronco after a disagreement with your wife",
     "#chat-and-nonesense",
     "'eating' an entire chocolate bar purely through licking ",
+    "knowing that today is your day since you only had to wipe once",
     "12 guys individually showing up to Twitchcon in a Witcher cosplay to impress their streamer crush",
     "A GENTLY USED BUTT PLUG",
     "Adderall",
+    "being just as cringe as PMC but having tenure",
     "Adriana Chechik",
+    "fucking white people",
     "Among Us",
     "Apro",
     "Apro",
@@ -212,6 +234,8 @@
     "Camyo",
     "Camyo",
     "fucking architects",
+    "seeing spongebob as nothing but holes",
+    "Spongebob, Gangbang Queen",
     "Jimbo Slice",
     "Jimbo Slice",
     "being just so fucking sweaty at a children's game",
@@ -243,7 +267,7 @@
     "a copy of my dick's girth certificate",
     "giggling after hearing that Tom Brady is now fully paralyzed",
     "men who are pro-choice about vaccines because no one can tell them what to do with their bodies, but not about pregnancy",
-    "Lima's rational hate boner for L*wis H*milton",
+    "Lima's rational hate boner for Lewis Hamilton",
     "Emily actually going to get sleep",
     "Emily bragging about how her niece is better than you again",
     "Emily's ASS and BOOBS. Oh, and PERSONALITY most of all",
@@ -339,7 +363,10 @@
     "Smeg",
     "Smeg",
     "Smeg's e-golfing ability",
+    "Smeg's probably waxed anus",
     "Snow demolishing the puzzle cubes",
+    "jizzing while reading Warhammer 40k lore",
+    "Warhammer 40k",
     "Snow's S-tier fingernails",
     "Snow's infuriating game suggestions",
     "Snowfloof",
@@ -361,13 +388,13 @@
     "Uncanny Scouters",
     "Uncanny Scouters",
     "Valheim",
+    "Darktide",
     "Vermintide",
     "Victor Reign",
     "leslitlik",
     "leslitlik",
     "Victor Reign",
     "Willy Wonka's Umami Asshole",
-    "Zenon",
     "a DMCA copyright strike",
     "a breeding competition between Emily and Oprah in which Emily isn't losing",
     "a composite image of all of the ass photos in Discord",
