--- a/server/decks/jaska.deck.json5
+++ b/server/decks/jaska.deck.json5
@@ -10,10 +10,16 @@
    [["Kanye West is now ranting about ",{},],],
    [["My uncle got me ",{}," for Christmas. I cried.",],],
    [["Clippy, the Microsoft Assistant, now offers help with ",{},"."],],
+   [["Economists now agree we can lower inflation with ",{},],],
+   [[{transform: "Capitalize",}, " would normally be funny, but I saw it on Family Guy once.",],],
+   [["That Sesame Street episode where Elmo spent most of the time ",{},],],
   ],
   responses: [
     "spending 19 minutes stuck in an elevator",
     "Elon's Musk",
+    "a bag of rocks that can scream",
+    "two really long ones",
+    "an uncontacted tribesman fucking a missionary doggy style",
     "inflating your dick by squeezing your balls",
     "rule 34 Muhammad (peace be unto him)",
     "Amber's Turd",
@@ -31,7 +37,7 @@
     "being indecisive over which color lives matter",
     "loving all races, even the bad ones",
     "Toast about to eat a bullet on stream when Xev didn't show up",
-    "sculpting your sex doll on Twitch",
+    "sculpting a sex doll on Twitch",
     "a threesome where only two are alive",
     "giving your girlfriend a promise ring (that you will leave your wife)",
     "introducing your girlfriend to your wife",
@@ -42,12 +48,19 @@
     "child labor",
     "ethically sourced slave labor",
     "receiving CPR from a teenage lifeguard and having to register as a sex offender",
+    "too many poles, not enough holes",
+    "(consensual) penetration by any means necessary",
+    "a charlatan putting the 'con' in 'consensual'",
+    "my favorite superhero, Respects Women Man",
+    "a Collector's Edition Jeffrey Epstein Funko Pop",
     "evicting a homeless person from his newspaper castle",
     "the Illuminaughty",
     "Butt CPR",
     "the yassification of Ronald Reagan",
     "Nancy Reagan, renowned cock gobbler",
     "getting the ol' JFK at the end of the date (messy head in the backseat of the car)",
+    "a fertile Mormon womb",
+    "divorce",
     "the reproductive act",
     "following the girl from the club home and crawling through her bathroom window to explain she accidentally gave you the wrong number",
     "having to tell Mickey that Minnie was not being silly, but fucking Goofy",
