--- a/server/decks/jaska.deck.json5
+++ b/server/decks/jaska.deck.json5
@@ -13,6 +13,7 @@
    [["Economists now agree we can lower inflation with ",{},],],
    [[{transform: "Capitalize",}, " would normally be funny, but I saw it on Family Guy once.",],],
    [["That Sesame Street episode where Elmo spent most of the time ",{},],],
+   [["Congress is now investigating the '",{},"' incident.",],],
   ],
   responses: [
     "spending 19 minutes stuck in an elevator",
@@ -23,6 +24,8 @@
     "inflating your dick by squeezing your balls",
     "rule 34 Muhammad (peace be unto him)",
     "Amber's Turd",
+    "quietly sobbing around a mouthful of dick",
+    "being the corpse found at the lowest elevation on Mt. Everest",
     "the Blue's Clues Booze Cruise",
     "yet another situation in which I have to escape through a window and flee naked into the streets",
     "the Challenger 'disaster'",
