--- a/server/decks/jaska.deck.json5
+++ b/server/decks/jaska.deck.json5
@@ -14,6 +14,7 @@
    [[{transform: "Capitalize",}, " would normally be funny, but I saw it on Family Guy once.",],],
    [["That Sesame Street episode where Elmo spent most of the time ",{},],],
    [["Congress is now investigating the '",{},"' incident.",],],
+   [["I kissed ",{}," and I liked it!"],],
   ],
   responses: [
     "spending 19 minutes stuck in an elevator",
