--- a/server/decks/jaska.deck.json5
+++ b/server/decks/jaska.deck.json5
@@ -24,6 +24,7 @@
     "an uncontacted tribesman fucking a missionary doggy style",
     "inflating your dick by squeezing your balls",
     "rule 34 Muhammad (peace be unto him)",
+    "whatever fits in my butt",
     "Amber's Turd",
     "quietly sobbing around a mouthful of dick",
     "being the corpse found at the lowest elevation on Mt. Everest",
