--- a/server/decks/bloom.deck.json5
+++ b/server/decks/bloom.deck.json5
@@ -27,7 +27,7 @@
     [["Camyo's comic he won't show to anyone: Emily, Toast and Lima ", {},],],
     [["Camyo's comic he won't show to anyone: Emily and Smeg ", {},],],
     [["Camyo's comic he won't show to anyone: Emily and Apro ", {},],],
-    [["Mueller took Camyo's mom on a romantic date filled with ", {}, " and " {},"."],],
+    [["Mueller took Camyo's mom on a romantic date filled with ", {}, " and ", {},"."],],
     [["Congratulations, you just earned a one-way ticket to ", {},],],
     [["Did you know there's a subreddit dedicated to Emily's ", {}, "?",],],
     [["Did you know there's a subreddit dedicated to Gambi's ", {}, "?",],],
